// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Protocol buffers to wrap all streaming compatible programmings
// so that they can be serialized within a single stream to provide
// the necessary FIFO guarantees.
syntax = "proto3";

package forwarding;

import "proto/forwarding/forwarding_table.proto";

option go_package = "github.com/openconfig/lemming/dataplane/proto/forwarding";

// Union of all possible streaming message requests.
message OperationRequest {
  oneof request {
    TableEntryAddRequest table_entry_add = 1;
    TableEntryRemoveRequest table_entry_remove = 2;
  }
}

// Union of all possible streaming message replies.
message OperationReply {
  oneof reply {
    TableEntryAddReply table_entry_add = 1;
    TableEntryRemoveReply table_entry_remove = 2;
  }
}